<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mediashare_Android</string>
    <string name="action_settings">Settings</string>
    <string name="contact_bryan">Bryan Vergauwen</string>
    <string name="contact_deranton">Deranton Antoine</string>
    <string name="contact_dujardin">Dujardin Yann</string>
    <string name="contact_cuvillier">Cuvillier Alexandre</string>
    <string name="contact_members">Membres du projet:</string>
    <string name="contacts">Contacts</string>
    <string-array name="type_media">
        <item>video</item>
        <item>Musique</item>
        <item>Image</item>
        <item>PDF</item>
        <item>Autre</item>
    </string-array>
</resources>
