<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connexion"
        android:id="@+id/connect_bt"
        android:onClick="connexion" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accueil"
        android:id="@+id/accueil_bt"
        android:layout_gravity="center_horizontal"
        android:onClick="accueil" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inscription"
        android:id="@+id/register_bt"
        android:layout_gravity="right"
        android:onClick="inscription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_members"
        android:id="@+id/tv_project_members"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffff0009" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_bryan"
        android:id="@+id/tv_contact_bryan"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_deranton"
        android:id="@+id/tv_contact_antoine"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_cuvillier"
        android:id="@+id/tv_contact_alex"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_dujardin"
        android:id="@+id/tv_contact_yann"
        android:layout_gravity="center_horizontal" />

</LinearLayout>